@@ -16,8 +16,9 @@
         <version>3.8.1</version>
         <configuration>
           <release>${java.version}</release>
-          <source>14</source>
-          <target>14</target>
+          <compilerArgs>--enable-preview</compilerArgs>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
       <plugin>
@@ -35,6 +36,11 @@
     <dependency>
       <artifactId>spring-boot-starter-data-mongodb</artifactId>
       <groupId>org.springframework.boot</groupId>
+    </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>1.1.0.Final</version>
     </dependency>
     <dependency>
       <artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
@@ -85,11 +91,11 @@
     <artifactId>spring-boot-starter-parent</artifactId>
     <groupId>org.springframework.boot</groupId>
     <relativePath/>
-    <version>2.3.0.RELEASE</version> <!-- lookup parent from repository -->
+    <version>2.5.6</version> <!-- lookup parent from repository -->
   </parent>
 
   <properties>
-    <java.version>14</java.version>
+    <java.version>17</java.version>
   </properties>
 
   <version>0.0.1-SNAPSHOT</version>
